frontend/test/should_pass/explode_implode.grg
using attrib_model_001;

rule r1(var s:string)
{
	str:NSTRING;
	str2:NSTRING;
	b:NBOOL;
	
	if {
		str.a == (str.a.asArray(",")).asString(",");
	}
---
	def ref exploded:array<string>;
	def var imploded:string;
	
	yield {
		yield exploded = s.asArray(",");
		yield imploded = exploded.asString(",");
	}

	modify {
	---
		def ref exploded_:array<string>;
		def var imploded_:string;
		
		eval {
			str.a = (str.a.asArray(",")).asString(",");
			yield exploded_ = s.asArray(",");
			yield imploded_ = exploded.asString(",");
		}
	}
}
