frontend/test/should_fail/array_dev.grg
function dev(ref a:array<string>) : double
{
	return(a.dev());
}